@@ -1,3 +1,10 @@
+2005-11-30  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: KDE and Red Hat name updates (Niko Mirthes)
+	Move system-lock-screen to actions from apps (Rodney Dawes)
+	Add folder-new to actions in place of directory-new (Rodney Dawes)
+	Add accessories-character-map to apps context (Rodney Dawes)
+
 2005-11-23  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: KDE media player icons (Niko Mirthes)
